src/test/ui/pattern/deny-irrefutable-let-patterns.stderr
error: irrefutable `let` pattern
  --> $DIR/deny-irrefutable-let-patterns.rs:4:12
   |
LL |     if let _ = 5 {}
   |            ^
   |
note: lint level defined here
  --> $DIR/deny-irrefutable-let-patterns.rs:1:9
   |
LL | #![deny(irrefutable_let_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^

error: irrefutable `let` pattern
  --> $DIR/deny-irrefutable-let-patterns.rs:6:15
   |
LL |     while let _ = 5 {
   |               ^

error: aborting due to 2 previous errors

